Kubernetes/app-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: app-deployment

  labels:

    app: app

spec:

  selector:

    matchLabels:

      app: app

  template:

    metadata:

      labels:

        app: app

    spec:

      containers:

      - name: app

        image: juliusandreas/app-image

        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1000m"

        ports:

        - containerPort: 81
