Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: app.local
    http:
      paths:
      - path: /
        backend:
          service:
            serviceName: ingress
            servicePort: 80
